feat: Phase 1 tasks 多人協作重構 + bug fix
後端 (tasks.py / task.py):
- 新增 require_task_role() decorator，成員/負責人分級存取控制
- 移除過時的 assistant 欄位（改由 task_users 資料表管理協作者）
- 新增 GET/POST/DELETE /tasks/<id>/members 成員管理端點
- 補填腳本 backfill_task_users.py（已執行）

後端 (timelines.py):
- fix: get_timeline_tasks 回應補上 priority / status / tags
  （修復 timeline 任務卡片優先級永遠顯示「中」的 bug）

前端:
- TasksView.vue：新增成員管理 Panel（邀請 / 踢人 / 角色標籤）
- taskService.js：新增 getMembers / addMember / removeMember / searchUser
- stores/tasks.js：移除舊 assistant 欄位處理邏輯

文件:
- 同步 docs/進度追蹤.md  根目錄
- 同步 docs/重構計畫.md  根目錄

--- a/進度追蹤.md
+++ b/進度追蹤.md
@@ -1,6 +1,6 @@
 # LearnLink 進度追蹤
 
-> 最後更新：2026/02/26  
+> 最後更新：2026/02/27  
 > 開發方式：Vibe Coding（高強度 AI 輔助）
 
 ---
@@ -65,31 +65,33 @@
 - [x] `TimelineDetailDialog.vue` — 「成員管理」按鈕加 `v-if="selectedTimeline?.role === 0"`
 
 **⚠️ 明天待做（前端剩餘）：**
-- [ ] 舊資料補填：跑 backfill 腳本補 `timeline_users` 紀錄（讓舊專案重新出現）
-- [ ] 成員管理 Panel UI — 顯示現有成員列表 + 個別踢人按鈕（呼叫 `removeMember`）
+- [x] 舊資料補填：執行 `backfill_timeline_users.py`（補 5 筆，1 筆跳過）
+- [x] 成員管理 Panel UI — 顯示現有成員列表 + 個別踢人按鈕（`kickMember`）
+- [x] `timelineService.js` 新增 `getMembers`
 
 **⚠️ 明天待做（tasks 多人協作）：**  
 > 詳細缺陷分析已在 2026/02/26 完成，整理如下：
-- [ ] `tasks.py` 加 `require_task_role()` decorator（參照 timelines 做法）
-- [ ] `GET /members`、`/subtasks`、`/comments` 加成員驗證（目前任何人可存取）
-- [ ] Subtask CRUD + toggle 加成員驗證
-- [ ] 統一用 `task_user.role` 做權限判斷（移除 `task.user_id` 判斷）
-- [ ] `update_task` 分層權限：協作者 = status/hours，owner = 其他欄位
-- [ ] 前端任務成員管理 UI（取代舊 `assistant` 欄位文字輸入）
+- [x] `tasks.py` 加 `require_task_role()` decorator（參照 timelines 做法，含 timeline 角色繼承）
+- [x] `GET /members`、`/subtasks`、`/comments` 加成員驗證（共 14 個路由)
+- [x] Subtask CRUD + toggle 加成員驗證
+- [x] 統一用 `task_user.role`（+ timeline_user 繼承）做權限判斷
+- [x] `delete_task`、管理成員路由改為 owner-only
+- [x] 新增 `GET /timelines/<id>/members` 端點（成員面板用）
+- [x] **前端任務成員管理 UI**（取代舊 `assistant` 欄位文字輸入）
 
 ---
 
 ## 🔄 進行中 / 待做
 
-> Phase 0 全部完成 ✅，Phase 1 進行中（多人協作後端完成）。
+> Phase 0 全部完成 ✅，Phase 1 進行中（多人協作 **全部完成**）。
 
 ### Phase 1 — 剩餘工作（預估 02/27~03/05）
 
-#### 多人協作收尾 🔴 — 目標 02/27 完成
-- [ ] 舊 timelines 補填 `timeline_users` 資料（backfill 腳本）
-- [ ] 成員管理面板顯示成員列表 + 踢人（前端 UI）
-- [ ] `tasks.py` 安全漏洞修補 + task_user 多人協作
-- [ ] 前端任務成員管理 UI
+#### 多人協作收尾 ✅ 完成（2026/02/27，超前進度）
+- [x] 舊 timelines 補填 `timeline_users` 資料（backfill 腳本）
+- [x] 成員管理面板顯示成員列表 + 踢人（前端 UI）
+- [x] `tasks.py` 安全漏洞修補 + task_user 多人協作
+- [x] 前端任務成員管理 UI（TasksView 成員管理 Panel）
 
 #### 任務留言與檔案上傳 🔴 — 目標 03/01~03/02
 - [ ] 留言輸入區支援附加檔案（圖片、PDF、文件）
@@ -150,7 +152,9 @@
 |---------|----------|------|
 | 02/26 | 多人協作後端（decorator + ORM 全面改寫）| ✅ 完成 |
 | 02/26 | 前端 role-based UI 按鈕隱藏 | ✅ 完成 |
-| 02/27 | 舊資料 backfill + 成員踢人 UI + tasks.py 修補 | ⬜ |
+| 02/27 | 舊資料 backfill + 成員管理 UI + tasks.py 安全修補 | ✅ 完成 |
+| 02/27 | 前端任務多人協作 UI（取代 assistant 欄位）| ✅ 完成（超前） |
+| 03/01 🎯 | 多人協作全部收尾 | ✅ 提前至 02/27 |
 | 02/28 | 前端任務多人協作 UI（取代 assistant 欄位）| ⬜ |
 | 03/01 🎯 | 多人協作全部收尾 | ⬜ |
 | 03/02 | 任務留言 + 檔案上傳 UI | ⬜ |
@@ -173,6 +177,7 @@
 | Step 0-3 TimelinesView 拆分（2569 → 301 行）| 1~2 天 | 1 天 |
 | Phase 1 多人協作後端（decorator + ORM 全改）| 2~3 天 | 1 天 |
 | Phase 1 前端 role-based UI | 1~2 天 | 半天 |
+| Phase 1 tasks 安全修補 + 成員面板 UI | 1 天 | 半天 |
 
 ---
 
@@ -181,6 +186,4 @@
 - `formatDate()` 等工具函式在 `TimelineViewModes.vue` / `TimelinesView.vue` 重複定義，待 Phase 1 後抽到 `utils/formatters.js`
 - `TimelineViewModes.vue`（741 行）/ `TimelineDetailDialog.vue`（405 行）內部 Modal 尚未細拆，留到 Phase 1
 - `stores/groups.js`、`stores/profile.js`、`stores/timelines.js` 尚未建立，延後到 Phase 1
-- **舊 `timelines` 資料沒有對應 `timeline_users` 紀錄**，需 backfill 才能顯示（明天先修）
-- `tasks.py` 子任務 / 留言 GET 路由無成員驗證（安全漏洞，明天修）
-- `assistant` 欄位（逗號字串）與 `task_user` 表並存冗餘，Phase 1 多人協作 UI 完成後廢棄
+
