--- a/重構計畫.md
+++ b/重構計畫.md
@@ -1,6 +1,6 @@
 # LearnLink 重構計畫
 
-> 最後更新：2026/02/26  
+> 最後更新：2026/02/27  
 > 開發策略：**結構重構優先 → 功能開發 → TypeScript 遷移**
 
 ---
@@ -290,7 +290,7 @@ export const useTodoStore = defineStore('todos', () => {
 > **前提：Phase 0 完成** ✅  
 > **最後更新：2026/02/26**
 
-### 1. 多人協作與權限系統 🔴 高優先 — 進行中
+### 1. 多人協作與權限系統 ✅ 完成（2026/02/27）
 
 #### 後端 ✅ 完成（2026/02/26）
 
@@ -319,26 +319,38 @@ export const useTodoStore = defineStore('todos', () => {
 - [x] `timelineService.js` 新增 `removeMember`
 - [x] `TimelineViewModes.vue` — ✏️ 🗑️ 按鈕加 `v-if="timeline.role === 0"`（List + Card 各 2 處）
 - [x] `TimelineDetailDialog.vue` — 「成員管理」按鈕加 `v-if="selectedTimeline?.role === 0"`
-- [ ] **⚠️ 舊資料補填** — 舊 `timelines` 沒有 `timeline_users` 紀錄導致不顯示，需跑 backfill 腳本
-- [ ] 前端成員管理 UI 顯示現有成員列表 + 踢人按鈕（呼叫 `removeMember`）
+- [x] **舊資料補填** — 跑 `backfill_timeline_users.py`，5 筆補填完成
+- [x] 前端成員管理 UI 顯示現有成員列表 + 踢人按鈕（呼叫 `removeMember`）
 
-#### Tasks 多人協作 ⬜ 待做（2026/02/26 分析完成，尚未動手）
+#### Tasks 多人協作 ✅ 完成（2026/02/27）
 
-> `task_user` 表結構與欄位齊全（role=0 負責人 / 1 協作者），  
-> 但後端仍混用 `task.user_id` 和 `task_user` 兩套邏輯，有安全漏洞。
+> `task_user` 表結構與欄位齊全（role=0 負責人 / 1 協作者）。  
+> 後端已統一改用 `task_user` 做所有權限判斷，舊的 `task.user_id` 邏輯已清除。
 
-**已知問題：**
-- `GET /tasks/<id>/members`、`/subtasks`、`/comments` — **無任何成員驗證**，任何登入者可存取
-- Subtask CRUD（POST/PUT/DELETE/toggle）— 同上，無成員驗證
-- `update_task`、`add_task_member`、`remove_task_member` — 用 `task.user_id` 而非 `task_user.role`，邏輯不一致
-- `assistant` 欄位（逗號字串）與 `task_user` 表並存，冗餘
+- [x] 新增 `get_user_task_role()` helper（先查 `task_user`，若無且任務屬於 timeline 則繼承 `timeline_user.role`）
+- [x] 新增 `require_task_role('member' | 'owner')` decorator factory
+- [x] 14 個路由全套上 decorator（見下表）
+- [x] `create_task` 建立後自動 insert `task_user(role=0)` 給建立者
+- [x] `assistant` 欄位已廢棄 — model 移除欄位、migration 執行完成、前端 UI/store 同步清除
 
-**計畫改法（待實作）：**
-- 新增 `get_user_task_role()` + `require_task_role()` decorator（參照 timelines 做法）
-- 統一用 `task_user.role` 做所有權限判斷
-- Subtask / comment GET 加成員驗證，PUT/DELETE 加 owner 驗證
-- `update_task` 分層：協作者限改 `status`/`actual_hours`；owner 才能改名稱/成員
-- `assistant` 欄位廢棄（前端改成多選 task_user 成員，需前後端同步）
+**路由權限對照表：**
+
+| 路由 | 權限 | 改動說明 |
+|------|------|----------|
+| `PUT /<id>` update_task | member | 移除舊 `task.user_id` 比對 |
+| `DELETE /<id>` delete_task | owner | 移除舊 filter_by user_id 查詢 |
+| `PATCH /<id>/toggle` | member | 移除舊 is_member 比對 |
+| `GET /<id>/members` | member | 原本完全無保護 |
+| `POST /<id>/members` | owner | 移除舊 `task.user_id` 比對 |
+| `DELETE /<id>/members/<id>` | owner | 移除舊 `task.user_id` 比對 |
+| `GET /<id>/comments` | member | 原本完全無保護 |
+| `POST /<id>/comments` | member | 移除多餘的 task 查詢 |
+| `GET /<id>/subtasks` | member | 原本完全無保護 |
+| `POST /<id>/subtasks` | member | 移除多餘的 task 查詢 |
+| `PUT /<id>/subtasks/<id>` | member | 原本完全無保護 |
+| `DELETE /<id>/subtasks/<id>` | member | 原本完全無保護 |
+| `PATCH /<id>/subtasks/<id>/toggle` | member | 原本完全無保護 |
+| `PATCH /<id>/status` | member | 移除舊 is_member 比對 |
 
 ---
 
