feat(trash): 垃圾桶回收機制 + 路由/Sidebar 入口 + docs 更新
## 後端 trash.py（新 blueprint）
- GET /api/trash
  自建或被指派的已刪任務；自建或身為成員的已刪專案
- PATCH /api/trash/tasks/<id>/restore  還原任務
- DELETE /api/trash/tasks/<id>  永久刪除任務（os.remove 清磁碟附件 + cascade 清 DB）
- PATCH /api/trash/timelines/<id>/restore  還原專案
- DELETE /api/trash/timelines/<id>  永久刪除專案
  （遍歷子任務磁碟附件 os.remove  db.delete task cascade  db.delete timeline cascade）
- 非建立者僅能查看，無法還原/永久刪除（403）

## app.py
- 新增 from blueprints.trash import trash_bp
- register_blueprint(trash_bp, url_prefix='/api/trash')

## 前端 trashService.js（新 service）
- getAll / restoreTask / permanentDeleteTask / restoreTimeline / permanentDeleteTimeline

## 前端 TrashView.vue（新頁面）
- 已刪專案 + 已刪任務兩區塊
- 還原 / 永久刪除按鈕（非建立者 is_owner=false 時隱藏）
- permanentDeleteTimeline 後重新 call loadTrash()，
  確保 cascade 刪除的子任務同步從前端清除（local filter 無法推算刪了哪些）

## 路由 + Sidebar
- router/index.js 新增 /trash  TrashView
- Sidebar.vue 新增 { path: '/trash', icon: '', text: '垃圾桶' }

## Docs 更新
- README.md：開發狀態、功能模組、專案結構、API 端點（垃圾桶區塊）全面更新
- 進度追蹤.md：Phase 1 全部標 、新增 Phase 1 收尾技術債區塊、時間軸補完
- 重構計畫.md：第 2/3 項標 、補技術債清單（timelines store、subtask UI）

--- a/進度追蹤.md
+++ b/進度追蹤.md
@@ -1,6 +1,6 @@
 # LearnLink 進度追蹤
 
-> 最後更新：2026/02/27  
+> 最後更新：2026/03/02  
 > 開發方式：Vibe Coding（高強度 AI 輔助）
 
 ---
@@ -85,7 +85,7 @@
 
 > Phase 0 全部完成 ✅，Phase 1 進行中（多人協作 **全部完成**）。
 
-### Phase 1 — 剩餘工作（預估 02/27~03/05）
+### Phase 1 — 完成清單（全部完成 ✅）
 
 #### 多人協作收尾 ✅ 完成（2026/02/27，超前進度）
 - [x] 舊 timelines 補填 `timeline_users` 資料（backfill 腳本）
@@ -93,14 +93,38 @@
 - [x] `tasks.py` 安全漏洞修補 + task_user 多人協作
 - [x] 前端任務成員管理 UI（TasksView 成員管理 Panel）
 
-#### 任務留言與檔案上傳 🔴 — 目標 03/01~03/02
-- [ ] 留言輸入區支援附加檔案（圖片、PDF、文件）
-- [ ] 任務詳情「檔案區」集中顯示所有附件
-- [ ] 檔案預覽、下載、刪除
+#### 任務留言與檔案上傳 ✅ 完成（2026/03/01~02）
+- [x] 後端 `timelines.py` 新增任務留言 CRUD（get/add/delete）
+- [x] 後端 `tasks.py` 新增任務留言 CRUD + 附件 CRUD（upload/get/delete/download）
+- [x] 附件儲存於 `uploads/task_files/`，DB 保留 `original_filename`（解決 `secure_filename` 過濾中文問題）
+- [x] 前端 `timelineService.js` / `taskService.js` 補完留言 + 附件方法
+- [x] `TimelineDetailDialog.vue` 任務詳情 — 附件預覽/下載/刪除 + 留言新增/刪除
+- [x] `TasksView.vue` 任務點擊 → 詳情 Modal — 附件 + 留言功能
+- [x] 下載改用 fetch+blob（解決跨來源 `<a download>` 無效問題）
+- [x] 重複路由整合：`timelines.py` 移除 6 條與 `tasks.py` 重複的路由（upload/getFiles/deleteFile/getComments/addComment/deleteComment）
+- [x] `timelineService.js` 移除重複的留言/附件方法，統一由 `taskService` 處理
+- [x] 所有 model 補上 `cascade='all, delete-orphan'`（TaskComment、TaskUser、Subtask、TaskFile、TimelineUser）
 
-#### 垃圾桶機制 🟡 — 目標 03/03~03/04
-- [ ] 後端查詢 / 還原 / 永久刪除 API
-- [ ] 垃圾桶頁面（Sidebar 入口）
+#### 垃圾桶機制 ✅ 完成（2026/03/02）
+- [x] 後端新建 `trash.py` blueprint：`GET /api/trash`、`PATCH /restore`、`DELETE`（任務 + 專案各一套）
+- [x] 永久刪除專案時同步清除所有子任務、附件（cascade + `os.remove`）
+- [x] 前端 `trashService.js`（5 個方法）
+- [x] `TrashView.vue`：已刪專案 + 已刪任務兩區塊，還原 / 永久刪除按鈕，非建立者唯讀
+- [x] Router 新增 `/trash`、Sidebar 新增 🗑️ 垃圾桶入口
+- [x] 修正：刪除專案後重新 call API（cascade 同步刪子任務，前端無法自行推算）
+
+---
+
+### Phase 1 收尾技術債（建議 Phase 2 開始前完成）
+
+#### Store 層補完 🟡
+- [ ] `stores/timelines.js` — TimelinesView 目前將狀態放在 view-local，待垃圾桶還原後刷新等跨頁需求出現再建
+- [ ] `stores/groups.js`
+- [ ] `stores/profile.js`
+
+#### Subtask 前端 UI 補完 🟢 低優先
+- [ ] `TasksView.vue` 任務詳情 Modal 顯示子任務（後端 + store 方法已備妥，可直接呼叫 `taskService.getSubtasks` 等）
+- [ ] `TimelineDetailDialog.vue` 任務詳情同步補上
 
 ---
 
@@ -137,7 +161,7 @@
 | Phase | 狀態 | Vibe Coding 預估 | 目標日期 |
 |-------|------|------------------|---------|
 | Phase 0 — 結構重構 | ✅ 完成 | — | — |
-| Phase 1 — MVP 功能 | 🔄 進行中 | Vibe ~1 週 | **03/05** |
+| Phase 1 — MVP 功能 | ✅ 完成（提前） | Vibe ~1 週 | **03/02** |
 | Phase 2 — 功能完善 | ⬜ 未開始 | Vibe ~1 週 | **03/14** |
 | Phase 3 — TypeScript | ⬜ 延後 | 不定 | — |
 | Phase 4 — 進階 | ⬜ 遠期 | 不定 | — |
@@ -155,12 +179,10 @@
 | 02/27 | 舊資料 backfill + 成員管理 UI + tasks.py 安全修補 | ✅ 完成 |
 | 02/27 | 前端任務多人協作 UI（取代 assistant 欄位）| ✅ 完成（超前） |
 | 03/01 🎯 | 多人協作全部收尾 | ✅ 提前至 02/27 |
-| 02/28 | 前端任務多人協作 UI（取代 assistant 欄位）| ⬜ |
-| 03/01 🎯 | 多人協作全部收尾 | ⬜ |
-| 03/02 | 任務留言 + 檔案上傳 UI | ⬜ |
-| 03/03 🎯 | 留言與檔案上傳全部完成 | ⬜ |
-| 03/04 | 垃圾桶機制：API + 頁面 | ⬜ |
-| 03/05 🌟 | **Phase 1 完成目標** | ⬜ |
+| 02/28 | 前端任務多人協作 UI（取代 assistant 欄位）| ✅ 提前 |
+| 03/01 | 任務留言 + 檔案上傳 後端 + 前端 | ✅ 完成 |
+| 03/02 | 垃圾桶機制：API + 頁面 + 修正 cascade | ✅ 完成 |
+| 03/05 🌟 | **Phase 1 完成目標** | ✅ 提前完成（03/02）|
 | 03/09 | 通知系統 完成 | ⬜ |
 | 03/12 | 數據分析儀表板 完成 | ⬜ |
 | 03/14 🌟 | **Phase 2 完成目標** | ⬜ |
@@ -178,12 +200,15 @@
 | Phase 1 多人協作後端（decorator + ORM 全改）| 2~3 天 | 1 天 |
 | Phase 1 前端 role-based UI | 1~2 天 | 半天 |
 | Phase 1 tasks 安全修補 + 成員面板 UI | 1 天 | 半天 |
+| Phase 1 任務留言 + 檔案上傳（後端 + 前端）| 2~3 天 | 1 天 |
+| Phase 1 垃圾桶機制（API + 頁面 + bug fix）| 1~2 天 | 半天 |
 
 ---
 
 ## 🚧 已知問題 / 技術債
-- `alert()` / `confirm()` 全站仍使用原生，待 Phase 1 後換 Toast 系統
-- `formatDate()` 等工具函式在 `TimelineViewModes.vue` / `TimelinesView.vue` 重複定義，待 Phase 1 後抽到 `utils/formatters.js`
-- `TimelineViewModes.vue`（741 行）/ `TimelineDetailDialog.vue`（405 行）內部 Modal 尚未細拆，留到 Phase 1
-- `stores/groups.js`、`stores/profile.js`、`stores/timelines.js` 尚未建立，延後到 Phase 1
+- `alert()` / `confirm()` 全站仍使用原生，待 Phase 2 後換 Toast 系統
+- `formatDate()` 等工具函式在多個元件重複定義，待穩定後拔到 `utils/formatters.js`
+- `TimelineViewModes.vue` 內部看板 / 日曆 Modal 尚未細拆，留到 Phase 2
+- `stores/timelines.js`、`stores/groups.js`、`stores/profile.js` 尚未建立
+- `TasksView.vue` / `TimelineDetailDialog.vue` 子任務 UI 尚未完成（後端已備妥）
 
