--- a/重構計畫.md
+++ b/重構計畫.md
@@ -1,6 +1,6 @@
 # LearnLink 重構計畫
 
-> 最後更新：2026/02/27  
+> 最後更新：2026/03/02  
 > 開發策略：**結構重構優先 → 功能開發 → TypeScript 遷移**
 
 ---
@@ -354,19 +354,35 @@ export const useTodoStore = defineStore('todos', () => {
 
 ---
 
-### 2. 任務留言與檔案上傳 🔴 高優先 — 未開始
+### 2. 任務留言與檔案上傳 ✅ 完成（2026/03/01~02）
 
-- [ ] 留言輸入區支援附加檔案（圖片、PDF、文件）
-- [ ] 任務詳情「檔案區」集中顯示所有附件
-- [ ] 檔案預覽（圖片 inline、其他開新分頁）、下載、刪除
+- [x] 後端 `tasks.py` 新增留言 CRUD + 附件 CRUD（upload / get / delete / download）
+- [x] 附件儲存於 `uploads/task_files/`，`original_filename` 備份（解決 `secure_filename` 過濾中文）
+- [x] 前端 `taskService.js` 補完留言 + 附件方法
+- [x] `TimelineDetailDialog.vue` 任務詳情 — 附件預覽 / 下載 / 刪除 + 留言
+- [x] `TasksView.vue` 任務點擊 → 詳情 Modal（附件 + 留言）
+- [x] 下載改用 fetch+blob（解決跨來源 `<a download>` 無效）
+- [x] 重複路由整合：`timelines.py` 移除 6 條與 `tasks.py` 重複的路由
+- [x] 所有 model 補上 `cascade='all, delete-orphan'`（TaskComment、TaskUser、Subtask、TaskFile、TimelineUser）
 
 ---
 
-### 3. 垃圾桶機制 🟡 中優先 — 未開始
+### 3. 垃圾桶機制 ✅ 完成（2026/03/02）
 
-- [ ] 後端新增查詢 / 還原 / 永久刪除 API
-- [ ] 垃圾桶頁面（Sidebar 新增入口）
-- [ ] 30 天自動清理（可選）
+- [x] 後端新建 `trash.py` blueprint：查詢 / 還原 / 永久刪除 API（任務 + 專案各一套）
+- [x] 永久刪除專案時同步清除所有子任務、附件（cascade + `os.remove`）
+- [x] 前端 `trashService.js`
+- [x] `TrashView.vue`：已刪專案 + 已刪任務，還原 / 永久刪除，非建立者唯讀
+- [x] Router + Sidebar 入口
+
+---
+
+### 技術債（Phase 1 結束，建議 Phase 2 前融入）
+
+- [ ] `stores/timelines.js` — 目前狀態放在 TimelinesView view-local
+- [ ] `stores/groups.js`、`stores/profile.js`
+- [ ] Subtask 前端 UI — `TasksView.vue` + `TimelineDetailDialog.vue` 任務詳情 Modal（後端已備妥）
+- [ ] `utils/formatters.js` — `formatDate()` 在多個元件重複定義
 
 ---
 
